improve json model
